# cocaine-plugins

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CodeStyle.md  Dockerfile  README.md
blastbeat/: CMakeLists.txt  driver.cpp  driver.hpp  event.cpp  event.hpp  job.cpp  job.hpp  module.cpp  stream.cpp  stream.hpp
cache/: CMakeLists.txt  README.md
cache/include/cocaine/: cache.hpp  lru_cache.hpp
cache/include/cocaine/idl/: cache.hpp
cache/include/cocaine/services/: cache.hpp
cache/src/: cache.cpp  module.cpp
cgroups/: CMakeLists.txt  isolate.cpp  isolate.hpp  module.cpp
chrono/: CMakeLists.txt  drifting_timer.cpp  drifting_timer.hpp  module.cpp  recurring_timer.cpp  recurring_timer.hpp
chrono/include/cocaine/: chrono.hpp
chrono/src/: chrono.cpp  module.cpp
conductor/: CMakeLists.txt  build.sh
conductor/agent/: agent.py  agent_channel.py  agent_util.py  appclient.py  fetch.py  isolate.py  protocol.py  session.py
conductor/agent/isolate/: porto.py  porto_fetch.py  porto_spawn.py
conductor/agent/testapp/: app.py  app.tgz  control.py  fork.profile.json  manifest.json  run-app.sh  upload.sh
conductor/isolate/: isolate.cpp  isolate.hpp  module.cpp
conductor/service/src/: conductor.cpp  module.cpp
conductor/src/: action.cpp  action.hpp  actions.cpp  actions.hpp  client.cpp  client.hpp  client_state.cpp  client_state.hpp  common.hpp  isolate.cpp  isolate.hpp  module.cpp  mpl-test.sh  test.cpp
dealer/: CMakeLists.txt  dealer_event.cpp  dealer_event.hpp  dealer_job.cpp  dealer_job.hpp  dealer_server.cpp  dealer_server.hpp  driver.cpp  driver.hpp  event.cpp  event.hpp  io.cpp  io.hpp  messaging.hpp  module.cpp  policy.hpp  stream.cpp  stream.hpp
docker/: CMakeLists.txt  docker_client.cpp  docker_client.hpp  http.cpp  http.hpp  isolate.cpp  isolate.hpp  module.cpp
echo/: CMakeLists.txt
echo/src/: echo.cpp  module.cpp
elasticsearch/: CMakeLists.txt  config.hpp.in
elasticsearch/src/: elasticsearch.cpp  module.cpp
elasticsearch/src/rest/: delete.cpp  delete.hpp  get.cpp  get.hpp  handlers.hpp  index.cpp  index.hpp  search.cpp  search.hpp
elasticsearch/tests/: CMakeLists.txt  main.cpp  test_ResponseHandling.cpp
elliptics/: CMakeLists.txt  README.md  elliptics.cpp  elliptics.hpp  module.cpp  storage.cpp  storage.hpp
elliptics/include/cocaine/: elliptics_logger.hpp  service.hpp  storage.hpp
elliptics/src/: module.cpp  service.cpp  storage.cpp
fs/: CMakeLists.txt  driver.cpp  driver.hpp  filesystem_monitor.cpp  filesystem_monitor.hpp  module.cpp
graphite/: CMakeLists.txt  README.md
graphite/include/cocaine/: graphite.hpp  metric.hpp
graphite/src/: graphite.cpp  metric.cpp  module.cpp
ipvs/: CMakeLists.txt  gateway.cpp  gateway.hpp  module.cpp  service.cpp  service.hpp
ipvs/libipvs-1.25/: CMakeLists.txt  libipvs.c  libipvs.h
ipvs/libipvs-1.26/: CMakeLists.txt  ip_vs.h  libipvs.c
logging/: CMakeLists.txt  logger.cpp  logger.hpp  module.cpp  service.cpp  service.hpp
logging/src/: logging_v2.cpp  module.cpp
logging/src/logging/: filter.cpp  metafilter.cpp
logging/tests/: run.rb
logstash/: CMakeLists.txt
logstash/src/: logstash.cpp  module.cpp
metrics/: CMakeLists.txt
metrics/src/: metrics.cpp  module.cpp
metrics/src/api/: sender.cpp
metrics/src/sender/: postgres.cpp
metrics/src/service/: metrics.cpp
mongo/: CMakeLists.txt  module.cpp  mongo.cpp  mongo.hpp  storage.cpp  storage.hpp
node/: CMakeLists.txt
node/src/: module.cpp  node.cpp  stream.cpp
node/src/api/: auth.cpp
node/src/auth/: anonymous.hpp  promiscuous.hpp
node/src/isolate/: external.cpp  fetcher.cpp  process.cpp
node/src/node/: actor.hpp  app.cpp  engine.cpp  engine.hpp  error.cpp  isometrics.cpp  isometrics.hpp  manifest.cpp  overseer.cpp  pool_observer.hpp  profile.cpp  slave.cpp  stats.cpp
node/src/stdext/: clamp.hpp
node/src/util/: bound.hpp  splitter.hpp
node/tests/: isolate_mock.cpp  slave.cpp
postgres/: CMakeLists.txt
postgres/src/: module.cpp  pool.cpp  postgres.cpp
postgres/src/error/: postgres.cpp
python/: CMakeLists.txt  dispatch.cpp  dispatch.hpp  emitter.cpp  emitter.hpp  event_source.cpp  event_source.hpp  io.cpp  io.hpp  log.cpp  log.hpp  module.cpp  objects.hpp  python.cpp  python.hpp  readable_stream.cpp  readable_stream.hpp  sandbox.cpp  sandbox.hpp  track.hpp  writable_stream.cpp  writable_stream.hpp
python/examples/hash/: manifest.json
server/: CMakeLists.txt  module.cpp  service.cpp  service.hpp
time/: CMakeLists.txt
timer/: CMakeLists.txt
timer/src/: module.cpp  timer.cpp
unicat/: .gitignore  .todo  CMakeLists.txt
unicat/src/: auth_cache.cpp  auth_cache.hpp  completion.cpp  completion.hpp  metainfo.cpp  module.cpp  unicat.cpp
unicat/src/backend/: backend.cpp  backend.hpp  fabric.cpp  fabric.hpp  storage.cpp  storage.hpp  unicorn.cpp  unicorn.hpp
unicat/tests/: .todo  load.py
unicorn/: CMakeLists.txt  README.md
unicorn/include/cocaine/: unicorn.hpp  zookeeper.hpp
unicorn/src/: module.cpp  unicorn.cpp  zookeeper.cpp
unicorn/src/api/: unicorn.cpp
unicorn/src/authorization/: unicorn.cpp  unicorn.hpp
unicorn/src/cluster/: unicorn.cpp
unicorn/src/repository/: zookeeper.cpp  zookeeper.hpp
unicorn/src/service/: unicorn.cpp
unicorn/src/unicorn/: errors.cpp  value.cpp  zookeeper.cpp
unicorn/src/zookeeper/: connection.cpp  exception.cpp  handler.cpp  session.cpp  zookeeper.cpp
unicorn/test/: run.rb  run_zk.sh  test.txt
uniresis/: CMakeLists.txt
uniresis/src/: module.cpp  uniresis.cpp
uniresis/src/uniresis/: error.cpp  resources.cpp
urlfetch/: CMakeLists.txt  module.cpp  urlfetch.cpp  urlfetch.hpp
urlfetch/include/cocaine/: urlfetch.hpp
urlfetch/src/: module.cpp  urlfetch.cpp
vicodyn/: CMakeLists.txt
vicodyn/src/: module.cpp
vicodyn/src/gateway/: vicodyn.cpp
vicodyn/src/vicodyn/: access_log.cpp  debug.cpp  invocation.cpp  peer.cpp  pool.cpp  proxy.cpp  request_context.cpp  session.cpp  stream.cpp
zeromq/: CMakeLists.txt  driver.cpp  driver.hpp  module.cpp  stream.cpp  stream.hpp  utils.hpp  zeromq_server.cpp  zmqsocket.cpp  zmqsocket.hpp
(+343 files in other folders)
